--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     />
 
     <script defer src="config.js"></script>
-    <script defer src="js/setDate.js"></script>
-    <script defer src="js/setLinks.js"></script>
-    <script defer src="js/setQuote.js"></script>
+    <script defer src="setDate.js"></script>
+    <script defer src="setLinks.js"></script>
+    <script defer src="setQuote.js"></script>
   </head>
   <body>
     <div id="topContainer" class="container bigContainer"></div>
